--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,7 @@ node_js:
     - "4"
     - "6"
 sudo: required
-addons:
-    apt:
-        packages:
-            - mysql-server-5.6
-            - mysql-client-core-5.6
-            - mysql-client-5.6
+services: mysql
 before_install:
   - mysql -u root -e "CREATE DATABASE parkinglot";
 after_script:
