--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "ioredis": "^2.4.0",
+    "kcors": "^1.3.1",
     "koa": "^1.2.4",
     "koa-bodyparser": "^2.2.0",
     "koa-compress": "^1.0.9",
