--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://github.com/suddi/parkinglot-api",
   "author": {
     "name": "Sudharshan Ravindran",
-    "email": "suddi@gmail.com",
+    "email": "suddir@gmail.com",
     "url": "https://suddi.github.io/"
   },
   "repository": {
