--- a/package.json
+++ b/package.json
@@ -27,42 +27,45 @@
     "npm": ">= 2.0.0"
   },
   "scripts": {
-    "coverage": "istanbul cover _mocha --include-all-sources",
+    "check-coverage": "istanbul check-coverage",
+    "coverage": "istanbul cover _mocha",
     "docker-up": "docker-compose up -d",
     "docker-down": "docker-compose down",
     "load-fixtures": "node load_fixtures.js",
     "lint": "eslint .",
     "prepush": "npm run lint",
+    "security-check": "nsp check --output summary",
     "setup": ". ./setup.sh",
     "start": "nodemon app.js",
-    "test": "npm run lint && npm run coverage"
+    "test": "npm run lint && npm run coverage && npm run check-coverage"
   },
   "dependencies": {
-    "co": "^4.6.0",
-    "ioredis": "^2.4.0",
-    "kcors": "^1.3.1",
-    "koa": "^1.2.4",
-    "koa-bodyparser": "^2.2.0",
-    "koa-compress": "^1.0.9",
-    "koa-logger": "^1.3.0",
-    "koa-ratelimit": "^2.4.0",
-    "koa-router": "^5.4.0",
-    "load-directory": "^1.1.12",
-    "lodash": "^4.16.6",
-    "moment": "^2.16.0",
+    "co": "^4.0.0",
+    "ioredis": "^2.0.0",
+    "kcors": "^1.0.0",
+    "koa": "^1.0.0",
+    "koa-bodyparser": "^2.0.0",
+    "koa-compress": "^1.0.0",
+    "koa-logger": "^1.0.0",
+    "koa-ratelimit": "^2.0.0",
+    "koa-router": "^5.0.0",
+    "load-directory": "^2.0.0",
+    "lodash": "^4.0.0",
+    "moment": "^2.0.0",
     "promise-mysql": "^2.0.0",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "co-mocha": "^1.1.3",
-    "eslint": "^2.4.0",
-    "eslint-config-suddi": "^1.0.0",
-    "husky": "^0.11.3",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.1.2",
-    "nodemon": "^1.11.0",
-    "sinon": "^1.17.6"
+    "chai": "^4.0.0",
+    "co-mocha": "^1.0.0",
+    "eslint": "^4.0.0",
+    "eslint-config-suddi": "^4.0.0",
+    "husky": "^0.14.0",
+    "istanbul": "^0.4.0",
+    "mocha": "^3.0.0",
+    "nodemon": "^1.0.0",
+    "nsp": "^2.8.0",
+    "sinon": "^4.0.0"
   },
   "eslintConfig": {
     "extends": "suddi/backend"
