--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: node_js
 node_js:
-    - "4"
-    - "6"
+    - '4'
+    - '6'
+    - '7'
+    - '8'
 sudo: required
 services: mysql
 before_install:
-  - mysql -u root -e "CREATE DATABASE parkinglot;"
+    - mysql -u root -e "CREATE DATABASE parkinglot;"
 after_script:
-    - bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN > /dev/null
+    - bash <(curl -s https://codecov.io/bash)
