--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "security-check": "nsp check --output summary",
     "setup": ". ./setup.sh",
     "start": "nodemon app.js",
-    "test": "npm run lint && npm run security-check && npm run coverage && npm run check-coverage"
+    "test": "npm run lint && npm run coverage && npm run check-coverage"
   },
   "dependencies": {
     "co": "^4.0.0",
